@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-20T01:01:15Z",
+  "timestamp" : "2022-07-20T08:16:39Z",
   "count_outdated" : 402,
   "uniques_outdated" : 218,
   "count" : 424,
-  "uniques" : 229,
+  "uniques" : 230,
   "clones" : [
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-15T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
