@@ -1,3 +1,10 @@
+2022-07-20T08:16:39Z:
+* notice: last 14d: unq all: 2 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 218 402 / 229 424
+* notice: next accum: outdated-unq outdated-all / unq all: 218 402 / 230 424
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-06 2022-07-20]
+
 2022-07-20T01:01:15Z:
 * notice: last 14d: unq all: 2 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 217 399 / 229 422
